...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Exercises" id="Dps-vv-wpC">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="lfM-zM-vXb">
                            <connections>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Muscle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7Gv-3f-JV0">
                                                    <rect key="frame" x="16" y="12" width="55" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Sides" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ORC-Pj-5y7" userLabel="Repeat">
                                                    <rect key="frame" x="16" y="12" width="42.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
            <objects>
                <navigationController title="Stretches" automaticallyAdjustsScrollViewInsets="NO" id="uom-E3-0a7" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Exercise List" image="ListIcon" id="YaR-Mg-C4N"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KiK-OH-pQn">
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Exercise Name" textAlignment="natural" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4VP-tb-Jgw">
                                                    <rect key="frame" x="20" y="0.0" width="335" height="44"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Nvu-Im-qnT">
                                                    <rect key="frame" x="16" y="12" width="37.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Exercises" id="qnt-Ou-bLz">
                        <barButtonItem key="rightBarButtonItem" title="New" id="UBb-1B-SwM">
                            <connections>
                                <segue destination="RtY-Je-0M1" kind="presentation" id="zoG-jz-d7U"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" id="0As-a1-ce1">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="Bvs-oo-APx">
                            <connections>
                                <segue destination="jTj-km-G50" kind="unwind" unwindAction="unwindToNewStretchListWithSender:" id="ci5-X5-gBg"/>
...
