...
            }
            descriptionText.text = exercise.explanation
            if exercise.explanation != "" {
                descriptionTextEmpty = false
            }
        } else {
            navigationItem.title = "New Exercise"
            targetLabel.text = "Choose one"
            targetLabel.textColor = placeholderGray
            sidesLabel.text = "Choose one"
            sidesLabel.textColor = placeholderGray
            typeLabel.text = "Choose one"
            typeLabel.textColor = placeholderGray
            setPlaceholderDescription()
...
